--- a/style.css
+++ b/style.css
@@ -18,12 +18,13 @@ body {
 .toolbar {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .logo {
-  min-width: 120px;
-  min-height: 40px;
-  max-width: fit-content;
+  min-width: fit-content;
+  min-height: fit-content;
+  max-width: 100vw;
   max-height: fit-content;
   display: flex;
   align-items: center;
@@ -56,9 +57,15 @@ body {
 }
 
 .headline h1 {
+  margin-top: 7vh;
+  margin-bottom: 7vh;
+}
+
+.headline h1 p {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-style: normal;
+  margin: 0;
 }
 
 .intro {
@@ -76,17 +83,23 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: #7f8cff;
-  height: 24px;
+  min-height: 24px;
   filter: contrast(7);
+  max-width: 90vw;
+  box-sizing: border-box;
 }
 
 .social-media {
   display: flex;
   list-style-type: none;
-  justify-content: space-between;
-  width: 170px;
-  height: 20px;
+  min-width: fit-content;
+  max-width: 100vw;
+  height: fit-content;
   margin-bottom: 114px;
+}
+
+.social-media li {
+  margin-right: 4vw;
 }
 
 .dot {
@@ -153,7 +166,8 @@ ul {
 
 .about-container1 input[type="button"] {
   box-sizing: border-box;
-  width: fit-content;
+  min-width: fit-content;
+  max-width: 80vw;
   height: fit-content;
   padding: 10px;
   background-color: transparent;
@@ -180,7 +194,8 @@ ul {
 
 #works input[type="button"] {
   box-sizing: border-box;
-  width: fit-content;
+  min-width: fit-content;
+  max-width: 100vw;
   height: fit-content;
   padding: 10px;
   background-color: transparent;
@@ -191,6 +206,7 @@ ul {
   font-weight: 500;
   font-size: 17px;
   color: #396df2;
+  word-break: break-all;
 }
 
 #works input[type="button"]:hover {
@@ -212,6 +228,13 @@ ul {
 }
 
 .about-container1 h2 {
+  height: fit-content;
+  padding-top: 7vh;
+  padding-bottom: 7vh;
+  white-space: normal;
+}
+
+.about-container1 h2 p {
   display: flex;
   flex-wrap: wrap;
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
@@ -219,6 +242,9 @@ ul {
   font-weight: 700;
   line-height: 48px;
   height: fit-content;
+  min-width: 50vw;
+  max-width: 100vw;
+  margin: 0;
 }
 
 .about-text {
@@ -245,6 +271,19 @@ ul {
   display: flex;
   flex-direction: column;
   height: fit-content;
+  max-width: 100vw;
+}
+
+.about-container1 header {
+  max-width: 100vw;
+}
+
+.headline header {
+  max-width: 100vw;
+}
+
+.about-container1 nav {
+  max-width: 100vw;
 }
 
 .about-connect {
@@ -258,16 +297,20 @@ ul {
   margin-top: 0;
   margin-bottom: 0;
   filter: contrast(7);
+  max-width: 100vw;
 }
 
 .about-social-media {
   display: flex;
-  width: 170px;
   height: fit-content;
+  max-width: 100vw;
   margin-top: 16px;
   list-style-type: none;
-  justify-content: space-between;
   padding-left: 0;
+}
+
+.about-social-media li {
+  margin-right: 4vw;
 }
 
 .about-list {
@@ -306,7 +349,9 @@ ul {
 }
 
 .language p {
-  margin-left: 12px;
+  margin-left: 3.2vw;
+  height: fit-content;
+  max-width: fit-content;
 }
 
 .language img {
@@ -330,7 +375,7 @@ ul {
   width: 100vw;
   display: flex;
   flex-direction: column;
-  padding-left: 24px;
+  padding-left: 6.4vw;
   box-sizing: border-box;
   margin-top: 114px;
   height: fit-content;
@@ -470,7 +515,8 @@ label {
   }
 
   .toolbar {
-    height: 48px;
+    min-height: 48px;
+    max-height: fit-content;
     width: 100vw;
   }
 
@@ -505,14 +551,12 @@ label {
     min-height: 604px;
   }
 
-  .headline h1 {
+  .headline h1 p {
     font-size: 40px;
     color: #172b4d;
     line-height: 52px;
     width: 87.2vw;
-    margin-top: 114px;
     margin-left: 6.4vw;
-    margin-bottom: 12px;
   }
 
   .intro {
@@ -527,7 +571,9 @@ label {
     margin-left: 6.4vw;
     margin-bottom: 12px;
     margin-top: auto;
-    height: 24px;
+    max-height: fit-content;
+    white-space: normal;
+    flex-wrap: wrap;
   }
 
   .social-media {
@@ -617,6 +663,7 @@ label {
     height: fit-content;
     align-items: center;
     justify-content: center;
+    word-break: break-all;
   }
 
   .work1 img,
@@ -634,6 +681,7 @@ label {
 
   .about-container1 input[type="button"] {
     margin-top: 12px;
+    display: flex;
   }
 
   #works input[type="button"] {
@@ -659,10 +707,13 @@ label {
     margin-bottom: 20px;
   }
 
-  .about-container1 h2 {
-    width: 76vw;
-    font-size: 45px;
+  .about-container1 h2 p {
+    min-width: 20vw;
+    max-width: 100vw;
+    font-size: 40px;
     color: #172b4d;
+    height: fit-content;
+    word-break: break-all;
   }
 
   .about-text {
@@ -715,7 +766,7 @@ label {
   .language {
     align-items: center;
     margin-top: 12px;
-    min-width: 303px;
+    width: 80vw;
   }
 
   .list-container p {
@@ -745,6 +796,7 @@ label {
     width: 87.2vw;
     border-radius: 8px;
     margin-bottom: 18px;
+    
   }
 
   #contact-form textarea {
@@ -770,5 +822,12 @@ label {
   #ruby2,
   #ruby3 {
     display: none;
+  }
+
+  p, h2, div, ul, li, .work-header, button, input, nav {
+    flex-wrap: wrap;
+    overflow-wrap: break-word;
+    height: fit-content;
+    white-space: normal;
   }
 }
